# clients

./: .gitignore  .release-please-manifest.json  AGENTS.md  Cargo.toml  README.md  lefthook.yml  release-please-config.json
.github/workflows/: audit.yml  ci.yml  fuzz.yml
crates/moldudp/: CHANGELOG.md  Cargo.toml  NOTICE  README.md  release-please-config.json  release-plz.toml
crates/moldudp/.github/workflows/: ci.yml  pr-title.yml
crates/moldudp/crates/client_moldudp/: Cargo.toml  README.md
crates/moldudp/crates/client_moldudp/src/: lib.rs
crates/moldudp/crates/moldudp/: Cargo.toml
crates/moldudp/crates/moldudp/src/: lib.rs
crates/moldudp/examples/: moldudp_recv_metrics.rs
crates/moldudp/lat.md/: lat.md
crates/moldudp/src/: ab.rs  config.rs  error.rs  event.rs  frame.rs  gap.rs  lib.rs  reassembly.rs  receiver.rs  wire.rs
crates/moldudp/src/receiver/: base.rs  construct.rs  mod.rs  recv.rs
crates/moldudp/tests/: ab_arbiter.rs  config_serde.rs  e2e_ab.rs  error_display.rs  gap_emitter.rs  gap_handler.rs  gap_tracing.rs  loopback.rs  multicast_join.rs  reassembler.rs  receiver_alloc.rs  receiver_owned.rs  receiver_pool_config.rs  receiver_recovery.rs  session_id.rs  wire.rs
crates/moldudp/tests/support/: mod.rs
crates/soupbintcp/: CHANGELOG.md  Cargo.toml  LICENSE  NOTICE  README.md  release-please-config.json
crates/soupbintcp/.github/: copilot-instructions.md
crates/soupbintcp/.github/workflows/: release.yml
crates/soupbintcp/crates/client_soupbintcp/: Cargo.toml  README.md
crates/soupbintcp/crates/client_soupbintcp/src/: lib.rs
crates/soupbintcp/crates/soupbintcp/: Cargo.toml
crates/soupbintcp/crates/soupbintcp/src/: lib.rs
crates/soupbintcp/examples/: soupbintcp_recv_metrics.rs
crates/soupbintcp/lat.md/: lat.md  soupbintcp.md
crates/soupbintcp/src/: client.rs  compressed.rs  config.rs  error.rs  event.rs  frame.rs  lib.rs  wire.rs
crates/soupbintcp/tests/: compressed.rs  config_serde.rs  error_display.rs  handshake.rs  heartbeat.rs  loopback.rs  managed.rs  sync_poll.rs  wire.rs
crates/soupbintcp/tests/common/: mod.rs
fuzz/: Cargo.toml
fuzz/corpus/moldudp_wire/: data-two-blocks  end-of-session  heartbeat  truncated-blocks
fuzz/corpus/soupbintcp_compressed/: corrupt-stream  split-mid-stream  two-sync-frames
fuzz/corpus/soupbintcp_framing/: no-splits  split-mid-frames  zero-length-error
fuzz/fuzz_targets/: moldudp_wire.rs  soupbintcp_compressed.rs  soupbintcp_framing.rs
lat.md/: fuzz.md  lat.md  moldudp.md  soupbintcp.md
workspace-hack/: Cargo.toml
