[package]
name = "client_moldudp"
description = "MoldUDP64 client: wire codec, sequence reassembler, gap request handler, A/B arbiter, receiver"
version = "0.1.0"
edition = "2024"
rust-version = "1.96.0"
authors = ["0x67 <69191110+0x67@users.noreply.github.com>"]
repository = "https://github.com/polaris-trade/client-moldudp"
homepage = "https://github.com/polaris-trade"
license = "MIT OR Apache-2.0"
readme = "README.md"
publish = ["polaris"]

[dependencies]
transport_core = { version = "0.2.1", registry = "polaris" }
bytes = "1.10.1"
serde = { version = "1.0.228", features = ["derive"] }
humantime-serde = "1.1.1"
thiserror = "2.0.18"
parking_lot = "0.12.4"
smallvec = { version = "1.13.2", features = ["const_generics"] }
bitvec = "1.0.1"

[dev-dependencies]
transport_tokio = { version = "0.2.1", registry = "polaris" }
mockall = "0.15"
rstest = "0.26.1"
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread", "net", "time"] }
allocation-counter = "0.8.1"
serde_json = "1.0.150"
toml = "0.8.2"

# High-performance release profile. See root AGENTS.md#High-Performance Rules.
# Cross-crate inlining + one codegen unit + abort-on-panic. Slower compile,
# faster runtime, smaller binary. Consumers may override in their own workspace.
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
