[package]
name = "client_moldudp"
description = "MoldUDP64 client: wire codec, sequence reassembler, gap request handler, A/B arbiter, receiver"
version = "0.4.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
publish = false

[dependencies]
transport_core.workspace = true
bytes.workspace = true
serde.workspace = true
humantime-serde.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
smallvec = { version = "1.13.2", features = ["const_generics"] }
bitvec = "1.1.1"
observability-core.workspace = true
metrics.workspace = true
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[dev-dependencies]
transport_tokio.workspace = true
mockall.workspace = true
rstest.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "time"] }
allocation-counter.workspace = true
serde_json.workspace = true
toml.workspace = true
observability.workspace = true
