[package]
name = "client_soupbintcp"
description = "SoupBinTCP v3.0 client with wire codec, session state, heartbeats, and compressed variant"
version = "0.3.0"
edition = "2024"
rust-version = "1.96.1"
authors = ["0x67 <69191110+0x67@users.noreply.github.com>"]
repository = "https://github.com/polaris-trade/client-soupbintcp"
homepage = "https://github.com/polaris-trade"
license = "MIT OR Apache-2.0"
readme = "README.md"
publish = false

[dependencies]
transport_core = { git = "https://github.com/polaris-trade/transport-core", tag = "transport_core-v0.3.2" }
bytes = "1.12.1"
serde = { version = "1.0.228", features = ["derive"] }
humantime-serde = "1.1.1"
thiserror = "2.0.18"
parking_lot = "0.12.5"
flate2 = { version = "1.1.9", optional = true }

[features]
default = []
compressed = ["dep:flate2"]

[dev-dependencies]
transport_tokio = { git = "https://github.com/polaris-trade/transport-tokio", tag = "transport_tokio-v0.3.4" }
mockall = "0.15"
rstest = "0.26.1"
tokio = { version = "1.52.3", features = [
  "macros",
  "rt-multi-thread",
  "net",
  "time",
] }
serde_json = "1.0"
toml = "1.1.2+spec-1.1.0"
allocation-counter = "0.8.1"

# High-performance release profile. See root AGENTS.md#High-Performance Rules.
# Cross-crate inlining + one codegen unit + abort-on-panic. Slower compile,
# faster runtime, smaller binary. Consumers may override in their own workspace.
[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
