[package]
name = "client_soupbintcp"
description = "SoupBinTCP v3.0 client with wire codec, session state, heartbeats, and compressed variant"
version = "0.7.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license.workspace = true
readme = "README.md"
publish = false

[dependencies]
# transport_core + transport_tokio resolve from the consolidated transports workspace (root [workspace.dependencies]).
transport_core.workspace = true
bytes.workspace = true
serde.workspace = true
humantime-serde.workspace = true
thiserror.workspace = true
parking_lot.workspace = true
flate2 = { version = "1.1.9", optional = true }
tokio = { workspace = true, optional = true, features = ["time", "macros"] }
observability-core.workspace = true
metrics.workspace = true
tracing.workspace = true
workspace-hack = { version = "0.1", path = "../../workspace-hack" }

[features]
default = []
compressed = ["dep:flate2"]
# Opt-in tokio driver: `recv_managed` fuses recv with heartbeat send + server
# silence detection in one select loop. Core stays runtime-free without it.
tokio = ["dep:tokio"]

[dev-dependencies]
transport_tokio.workspace = true
observability.workspace = true
mockall.workspace = true
rstest.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "net", "time"] }
serde_json.workspace = true
toml.workspace = true
allocation-counter.workspace = true

[[example]]
name = "soupbintcp_recv_metrics"
required-features = ["tokio"]
