[package]
name = "moldudp"
description = "MoldUDP64 protocol codec, sequence reassembler, gap request handler, and A/B arbiter"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license = "MIT"
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
transport_core = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
humantime-serde = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
smallvec = { workspace = true }
bitvec = { workspace = true }

[dev-dependencies]
transport_tokio = { workspace = true }
mockall = { workspace = true }
rstest = { workspace = true }
tokio = { workspace = true }
allocation-counter = { workspace = true }
