[package]
name = "soupbintcp"
description = "SoupBinTCP v3.0 client with wire codec, session state, heartbeats, and compressed variant"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
license = "MIT"
readme = "README.md"

[lib]
path = "src/lib.rs"

[dependencies]
transport_core = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }
humantime-serde = { workspace = true }
thiserror = { workspace = true }
parking_lot = { workspace = true }
flate2 = { workspace = true, optional = true }

[features]
default = []
compressed = ["dep:flate2"]

[dev-dependencies]
transport_tokio = { workspace = true }
mockall = { workspace = true }
rstest = { workspace = true }
tokio = { workspace = true }
